tests/samples/valid/bitwise_expression.pn
fn main() -> u8
{
	return: (0b10000000) | (1 << 6) | (15 & !0x07)
}
