tests/samples/invalid/invalid_character.pn
fn main()
{
	return: 2 @ 7
}
